[package]
name = "bcc"
version = "0.1.1"
authors = ["Robert Mourey Jr <rmourey_jr@blockchain-company.io>", "Original Authors Vincent Hanquez and Nicolas Di Prima of IOHK"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/the-blockchain-company/rust-bcc"
homepage = "https://github.com/the-blockchain-company/rust-bcc/bcc#README.md"
description = """
The Bcc library. This includes full support for the Bcc blockchain and wallets. It also provides helpers to maintain HDWallets and includes a transaction build engine.
"""
keywords = [ "Bcc", "Wallet", "Crypto" ]

[build-dependencies]

[dependencies]
cryptoxide = "0.1"
cbor_event = "^2.1.1"
chain-core = { path = "../chain-core" }

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
lazy_static = "1.2"
rand = "0.6"
serde_json = "1.0"
unicode-normalization = "0.1"
quickcheck = "0.8"
base64 = "0.9"

[features]
default = []
with-bench = []
generic-serialization = ["serde", "serde_derive"]
